2018-03-23  Carl Hetherington  <cth@carlh.net>

	* Add space shortcut to start/stop playback (#1201).

2018-03-22  Carl Hetherington  <cth@carlh.net>

	* Allow CPL selection in player (#1239).

	* Add hint about making a DCP with a very different frame rate
	to the content.

2018-03-21  Carl Hetherington  <cth@carlh.net>

	* Updated nl_NL translation from Rob van Nieuwkerk.

2018-03-19  Carl Hetherington  <cth@carlh.net>

	* Version 2.11.78 released.

2018-03-16  Carl Hetherington  <cth@carlh.net>

	* Version 2.11.77 released.

2018-03-16  Carl Hetherington  <cth@carlh.net>

	* Version 2.11.76 released.

	* Updated de_DE translation from Carsten Kurz.

	* Version 2.12.1 released.

2018-03-22  Carl Hetherington  <cth@carlh.net>

	* Version 2.12.0 released.

2018-03-22  Carl Hetherington  <cth@carlh.net>

	* Version 2.11.79 released.

2018-03-21  Carl Hetherington  <cth@carlh.net>

	* Updated nl_NL translation from Rob van Nieuwkerk.

2018-03-19  Carl Hetherington  <cth@carlh.net>

	* Better error when loading a non-certificate as a certificate.

	* Very basic DCP verification option in the player.

2018-03-07  Carl Hetherington  <cth@carlh.net>

	* Fix bad DCPs when re-making in encrypted projects (#1232).

2018-03-02  Carl Hetherington  <cth@carlh.net>

	* Fix bad Prores exports in some cases (#1227).

2018-02-27  Carl Hetherington  <cth@carlh.net>

	* Add a hint about the stereo-to-5.1 upmixers being
	`experimental'.

2018-02-25  Carl Hetherington  <cth@carlh.net>

	* Updated es_ES translation from Manuel AC.

	* Handle errors in subtitle XML better (#1209).

2018-02-24  Carl Hetherington  <cth@carlh.net>

	* Updated fr_FR translation from Thierry Journet.

2018-02-12  Carl Hetherington  <cth@carlh.net>

	* Version 2.11.55 released.

2018-02-10  Carl Hetherington  <cth@carlh.net>

	* Version 2.11.54 released.

2018-02-10  Carl Hetherington  <cth@carlh.net>

	* Use a different way of getting frame rate from video content; may
	fix #1030.
