@@ -219,7 +219,8 @@ enum {
 	/* IDs for shortcuts (with no associated menu item) */
 	ID_add_file,
 	ID_remove,
-	ID_start_stop
+	ID_start_stop,
+	ID_timeline
 };
 
 class DOMFrame : public wxFrame
@@ -329,20 +330,22 @@ public:
 		overall_panel->SetSizer (main_sizer);
 
 #ifdef __WXOSX__
-		int accelerators = 4;
+		int accelerators = 5;
 #else
-		int accelerators = 3;
+		int accelerators = 4;
 #endif
 		wxAcceleratorEntry* accel = new wxAcceleratorEntry[accelerators];
 		accel[0].Set (wxACCEL_CTRL, static_cast<int>('A'), ID_add_file);
 		accel[1].Set (wxACCEL_NORMAL, WXK_DELETE, ID_remove);
 		accel[2].Set (wxACCEL_NORMAL, WXK_SPACE, ID_start_stop);
+		accel[3].Set (wxACCEL_CTRL, static_cast<int>('T'), ID_timeline);
 #ifdef __WXOSX__
-		accel[3].Set (wxACCEL_CTRL, static_cast<int>('W'), wxID_EXIT);
+		accel[4].Set (wxACCEL_CTRL, static_cast<int>('W'), wxID_EXIT);
 #endif
 		Bind (wxEVT_MENU, boost::bind (&ContentPanel::add_file_clicked, _film_editor->content_panel()), ID_add_file);
 		Bind (wxEVT_MENU, boost::bind (&DOMFrame::remove_clicked, this, _1), ID_remove);
 		Bind (wxEVT_MENU, boost::bind (&DOMFrame::start_stop_pressed, this), ID_start_stop);
+		Bind (wxEVT_MENU, boost::bind (&DOMFrame::timeline_pressed, this), ID_timeline);
 		wxAcceleratorTable accel_table (accelerators, accel);
 		SetAcceleratorTable (accel_table);
 		delete[] accel;
@@ -1211,6 +1214,11 @@ private:
 		} else {
 			_film_viewer->start();
 		}
+	}
+
+	void timeline_pressed ()
+	{
+		_film_editor->content_panel()->timeline_clicked ();
 	}
 
 	FilmEditor* _film_editor;
